--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
         "selector"
     ],
     "author": {
-        "name": "Pavel Dymkov",
-        "email": "dymkov86@gmail.com"
+        "name": "Mariano Aloi",
+        "email": "mariano@aloi.adv.com.br"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/PavelDymkov/puppeteer-shadow-selector.git"
+        "url": "https://github.com/marianoaloi/puppeteer-shadow-selector.git"
     },
     "license": "MIT",
     "dependencies": {
-        "@types/puppeteer": "^5.4.3",
-        "logical-not": "^1.0.7"
+        "@types/puppeteer": "^7.0.4",
+        "logical-not": "^1.0.9"
     },
     "devDependencies": {
-        "mocha": "^8.4.0",
-        "puppeteer": "^9.1.1",
-        "typescript": "^4.2.4"
+        "mocha": "^10.2.0",
+        "puppeteer": "^21.5.2",
+        "typescript": "^5.3.2"
     }
 }
